# DSP-Cpp-filters

./: .gitignore  CMakeLists.txt
lib/: filter_common.h  fo_apf.h  fo_hpf.h  fo_lpf.h  fo_shelving_high.h  fo_shelving_low.h  so_apf.h  so_bpf.h  so_bsf.h  so_butterworth_bpf.h  so_butterworth_bsf.h  so_butterworth_hpf.h  so_butterworth_lpf.h  so_hpf.h  so_linkwitz_riley_hpf.h  so_linkwitz_riley_lpf.h  so_lpf.h  so_parametric_cq_boost.h  so_parametric_cq_cut.h  so_parametric_ncq.h
tests/: CMakeLists.txt
